<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/optionHome"
        android:title="@string/home"/>

    <item
        android:id="@+id/optionMyOrder"
        android:title="@string/myOrders"/>

    <item
        android:id="@+id/optionMyAccount"
        android:title="@string/myAccount"/>

    <item
        android:id="@+id/optionContactUs"
        android:title="@string/contact_us"/>

    <item
        android:id="@+id/optionAboutUs"
        android:title="@string/about_us"
        android:visible="true"/>

    <item
        android:id="@+id/optionFeedBack"
        android:title="@string/feedback"
        android:visible="false"/>

    <item
        android:id="@+id/optionLogout"
        android:title="@string/logout"/>

</menu>