<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:fillViewport="true">
    <include
        layout="@layout/header"
        android:id="@+id/title_header">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:padding="@dimen/_20sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:layout_margin="10dp"
            android:gravity="center">

            <TextView
                android:text="@string/mb_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

            </TextView>

        </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="bottom"
                android:layout_weight="0.1"
                >

                <TextView
                    android:text="@string/verify_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:layout_weight="0.07"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/text_color_grey"
                    android:layout_marginRight="10dp">

                </TextView>
            </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_otp"
            android:theme="@style/TextLabell"
            android:layout_marginTop="@dimen/_40sdp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="left"
                android:maxLength="6"
                android:textSize="@dimen/_14sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:id="@+id/editOtp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:hint="@string/verify" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:text="@string/resend_otp"
            android:id="@+id/textResendOtp"
            android:padding="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/blue">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/show_misscall_ll">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/missed_call_ll"
            android:layout_alignParentRight="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="@dimen/_10sdp"
                android:text="@string/not_getting_otp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/_2sdp"
                android:textColor="@color/blue"
                android:textSize="@dimen/_10sdp"
                android:text="@string/confirm_call"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical|center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:padding="@dimen/_3sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/to_number"
                android:text="+919854555544"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/number_button"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="@dimen/_30sdp"
                android:clickable="true"
                android:padding="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:src="@drawable/green_phone"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/from1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/from_number"
            android:padding="@dimen/_3sdp"
            android:text="98754789955"
            android:gravity="center"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"/>
        </LinearLayout>


        <Button
            android:id="@+id/buttonVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_otp"
            android:textColor="@color/textColor_button"
            android:background="@drawable/button_background"
            android:textSize="@dimen/_18sdp"
            android:layout_margin="@dimen/_30sdp"
            android:padding="@dimen/_10sdp"
            android:gravity="center|center_horizontal" />

        <TextView
            android:id="@+id/textNote"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:layout_weight="0.07"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text_color_grey"
            android:layout_marginRight="10dp"/>


      <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:id="@+id/imageVeroifyCall"
            android:src="@drawable/ic_mobile_icon_white"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:visibility="gone"
            android:layout_alignParentBottom="true"/>

    </LinearLayout>
        </ScrollView>
</LinearLayout>