<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        layout="@layout/header"
        android:id="@+id/title_header">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:layout_below="@+id/title_header"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabell"
        android:visibility="visible"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="10"
            android:id="@+id/account_pass_forgot"
            android:hint="@string/pin_account_set"
            android:gravity="start"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/grey"
            android:nextFocusDown="@id/account_confirm_pass"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabell"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textSize="@dimen/_12sdp"
            android:nextFocusDown="@id/email_tv"
            android:id="@+id/account_confirm_pass_forgot"
            android:hint="@string/confirm_pin_account_set"
            android:textColorHint="@color/grey"/>
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/butResetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/SubmitCaps"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_50sdp"
            android:background="@drawable/button_background"
            android:textSize="@dimen/_14sdp"/>

    </LinearLayout>
</RelativeLayout>