<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_round"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:paddingTop="@dimen/_5sdp"
                android:id="@+id/p_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:visibility="gone"
                android:src="@drawable/information_icon" />

            <LinearLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/are_you_sure"
                    android:textColor="@color/textColor_text"
                    android:textSize="18sp">

                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/text_color_grey"/>
                <TextView
                    android:textColor="@color/text_color_grey"
                    android:id="@+id/p_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/logout_confirm1"
                    android:textSize="16sp">

                </TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/p_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no"
                    android:layout_weight="1"
                    android:textColor="@color/textColor_text"
                    android:textSize="@dimen/_12sdp">

                </TextView>
                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/text_color_grey"/>

                <TextView
                    android:id="@+id/p_yes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:textColor="@color/textColor_text"
                    android:textSize="@dimen/_12sdp">

                </TextView>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>
